test/errors/parsing/dotExprInUseImport.compopts
--detailed-errors # dotExprInUseImport-detailed.good
--no-detailed-errors # dotExprInUseImport-brief.good
